--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ shop.name }}</title>
     {{ 'style.css' | asset_url | stylesheet_tag }}
+    {{content_for_header}}
 </head>
 <body>
     <header>
