--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ shop.name }}</title>
-    {{ 'style.css' | asset_url | stylesheet_tag }}
+    {{ 'custom-style.css.liquid' | asset_url | stylesheet_tag }}
     {{content_for_header}}
 </head>
 <body>
