--- a/assets/custom-style.css.liquid
+++ b/assets/custom-style.css.liquid
@@ -1,44 +1,44 @@
 body {
-    font-family: 'Arial', sans-serif; /* Change this to your preferred font. */
+    font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
 }
 
-.main-header {
+body .main-header {
     display: flex;
-    justify-content: center; /* Updated to center the items */
+    justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80px; /* Added a fixed height for the header */
+    height: 80px;
     background-color: #000;
 }
 
-.main-nav .nav-list {
+body .main-nav .nav-list {
     display: flex;
-    justify-content: space-between; /* Ensures spacing between the list items */
+    justify-content: space-between;
     align-items: center;
     list-style: none;
-    width: 80%; /* Restricting the width for better spacing */
+    width: 80%;
     padding: 0;
-    margin: 0 auto; /* Centers the nav list */
+    margin: 0 auto;
 }
 
-.nav-list li {
-    margin: 0 20px; /* Increased the margin for better spacing */
+body .nav-list li {
+    margin: 0 20px;
 }
 
-.nav-list a {
+body .nav-list a {
     text-decoration: none;
     color: #FFF;
     font-size: 16px;
     transition: color 0.3s ease;
 }
 
-.nav-list a:hover {
+body .nav-list a:hover {
     color: #888;
 }
 
-.nav-logo a img {
+body .nav-logo a img {
     max-height: 50px;
     width: auto;
 }
